--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,7 @@
     <string name="currency_try_name">Turkish lira</string>
     <string name="currency_usd_name">United States dollar</string>
     <string name="currency_zar_name">South African rand</string>
+
+    <string name="message_error_data_load">Could not load data</string>
+    <string name="currency_image">Currency image</string>
 </resources>
