--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,5 +36,7 @@
     <string name="currency_zar_name">South African rand</string>
 
     <string name="message_error_data_load">Could not load data</string>
+    <string name="message_error_data_calculated">Could not calculated data</string>
     <string name="currency_image">Currency image</string>
+    <string name="snackbar_reload">Reload</string>
 </resources>
